04 / 05 /2023 : Improved Products Page and refined search functionality.

--- a/WebScrapper_Prototype/Properties/launchSettings.json
+++ b/WebScrapper_Prototype/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "wazaware.co.za": {
+    "WazaWare.co.za": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
