--- a/WebScrapper_Prototype/appsettings.json
+++ b/WebScrapper_Prototype/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "wazaware_db_context": "Server=162.19.226.81,1433;Database=wazawaredb;User Id=sa;Password=Silureicky6#;Encrypt=True;TrustServerCertificate=True;"
+    "WazaWare_db_context": "Server=162.19.226.81,1433;Database=WazaWaredb;User Id=sa;Password=Silureicky6#;Encrypt=True;TrustServerCertificate=True;"
   }
 }
