--- a/WebScrapper_Prototype/wazaware.co.za.csproj
+++ b/WebScrapper_Prototype/wazaware.co.za.csproj
@@ -28,6 +28,7 @@
 			<TreatAsUsed>true</TreatAsUsed>
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.12" />
+		<PackageReference Include="Moq" Version="4.18.4" />
 		<PackageReference Include="OpenAI.Api" Version="1.0.0" />
 		<PackageReference Include="TextCopy" Version="6.2.1" />
 		<PackageReference Include="X.PagedList.Mvc.Core" Version="8.4.3" />
